Fixed images flickering on home page and updated README.md bugs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,9 +23,15 @@ body {
     width: 100%;
     min-height: 100%;
     position:absolute;
-    z-index: 1;
+    z-index: 0;
     background-color: var(--onyx);
     opacity: 0.4;
+}
+
+.footer-wrapper {
+    background-color: var(--matte-black);
+    position: relative;
+    z-index: 1;
 }
 
 .top-layer {
